# readability-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json  run_bench
.github/workflows/: rust-ci.yml
benches/: readability.js  readability.rs  run_bench  wikipedia.html
benches/go/: go.mod  go.sum  readability.go
benches/javascript/: readability.js
benches/rust/: main.rs
data/: comment.html
data/comment/: expected_with_scorer.html  expected_with_scorer.txt  input.html
data/comments/: expected.html  expected.txt  expected_with_scorer.html  expected_with_scorer.txt  input.html
data/hn/: expected.html  expected_with_scorer.html  expected_with_scorer.txt
data/url/: expected.html  expected.txt  input.html
src/: dom.rs  error.rs  extractor.rs  html.rs  lib.rs  scorer.rs  utils.rs
tests/: lib.rs
