[package]
name = "readability"
version = "0.3.0"
edition = "2021"
authors = ["Hiroki Kumamoto <kumabook@live.jp>"]
license = "MIT"
homepage = "https://github.com/kumabook/readability"
repository = "https://github.com/kumabook/readability.git"
description = "Port of arc90's readability project to rust"
keywords = ["readability"]
categories = []

[dependencies]
regex = "1.11"
url = "2.4"
html5ever = "0.26"
markup5ever_rcdom = "0.2"
lazy_static = "1.4"
log = "0.4.22"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false, optional = true }
anyhow = "1.0.94"
env_logger = "0.11.5"

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
