[package]
name = "readability-rs"
version = "0.5.0"
edition = "2021"
authors = ["Hiroki Kumamoto <kumabook@live.jp>", "quambene <contact.quambene@gmail.com>"]
description = "Port of arc90's readability project to rust"
homepage = "https://github.com/quambene/readability-rs"
repository = "https://github.com/quambene/readability-rs"
documentation = "https://docs.rs/readability-rs"
keywords = ["readability", "text", "html", "converter"]
categories = ["text-processing"]
readme = "README.md"
license = "MIT"

[lib]
path = "src/lib.rs"
name = "readability"

[[bench]]
name = "readability"
path = "benches/rust/readability.rs"
harness = false

[dependencies]
regex = "1.11"
url = "2.4"
html5ever = "0.29"
lazy_static = "1.4"
log = "0.4.22"
thiserror = "2.0.6"
tendril = "0.4.3"

[dev-dependencies]
criterion = "0.5.1"
env_logger = "0.11.5"
rstest = "0.23.0"
